🔧 Add config-driven custom domain and streamline MCP configs
- Add customDomain param to Bicep for persistent domain binding
- Add managed certificate resource for SSL
- Remove unnecessary env:{} from MCP installation examples
- Update README to use mcp-remote instead of mcp-proxy

--- a/src/backend/static/index.html
+++ b/src/backend/static/index.html
@@ -992,8 +992,7 @@
         <span class="json-string">"-y"</span><span class="json-punctuation">,</span>
         <span class="json-string">"mcp-remote@latest"</span><span class="json-punctuation">,</span>
         <span class="json-string">"https://lex-api.victoriousdesert-f8e685e0.uksouth.azurecontainerapps.io/mcp"</span>
-      <span class="json-punctuation">]</span><span class="json-punctuation">,</span>
-      <span class="json-key">"env"</span><span class="json-punctuation">:</span> <span class="json-punctuation">{}</span>
+      <span class="json-punctuation">]</span>
     <span class="json-punctuation">}</span>
   <span class="json-punctuation">}</span>
 <span class="json-punctuation">}</span></pre>
