📝 Add caselaw summaries to docs and skill

--- a/src/backend/static/index.html
+++ b/src/backend/static/index.html
@@ -1088,7 +1088,8 @@
                         <div class="govuk-grid-column-one-half">
                             <h3 class="govuk-heading-m">Caselaw</h3>
                             <ul class="govuk-list govuk-list--bullet">
-                                <li><code>search_for_caselaw</code> - Search court cases and judgements</li>
+                                <li><code>search_caselaw_summaries</code> - <strong>Start here:</strong> AI-generated case summaries (~500 words each) for efficient discovery</li>
+                                <li><code>search_for_caselaw</code> - Full judgment text (can be 50K+ characters)</li>
                                 <li><code>search_for_caselaw_section</code> - Search within case sections</li>
                                 <li><code>search_for_caselaw_by_reference</code> - Find cases citing legislation/caselaw</li>
                             </ul>
